# pytypeinput

./: 404.html  demo_generator.py  generate_demos.py  index.html  mkdocs.yml  objects.inv  pyproject.toml  readme.md
api/: index.html
basic-types/: index.html
choices/: index.html
composition/: index.html
constraints/: index.html
demos/: audio_file.html  bool_basic.html  choices_defaults.html  choices_lists.html  color_basic.html  combined_constraints.html  combined_ui.html  composition_basic.html  composition_slider.html  data_file.html  date_basic.html  date_constraints.html  date_strict.html  defaults.html  description.html  document_file.html  dropdown_basic.html  dropdown_int.html  email_basic.html  enum_basic.html  enum_int.html  file_basic.html  float_basic.html  float_constraints.html  float_strict.html  image_file.html  int_basic.html  int_constraints.html  int_strict.html  label.html  list_bool.html  list_combined.html  list_constraints.html  list_date.html  list_defaults.html  list_email.html  list_float.html  list_image.html  list_int.html  list_item_constraints.html  (+25 more)
docs/: api.md  basic-types.md  choices.md  composition.md  constraints.md  demo_generator.py  generate_demos.py  html-renderer.md  index.md  lists.md  optionals.md  special-types.md  ui-metadata.md
examples/: class_to_gui.py  css_variables.py  dataclass_to_gui.py  function_to_gui.py  pydantic_to_gui.py  type_to_gui.py  visual_test_base.py
html-renderer/: index.html
lists/: index.html
optionals/: index.html
pytypeinput/: __init__.py  analyzer.py  analyzers.py  helpers.py  (+3 more)
(+132 files in other folders)
